find styles pls

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="description" content="The Curriculum Vitae of Aaron Jenner."/>
 <meta charset="UTF-8"> 
 
-<link type="text/css" rel="stylesheet" href="style.css">
+<link type="text/css" rel="stylesheet" href="https://github.com/ajenner/ajenner.github.io/blob/master/style.css">
 
 <!--[if lt IE 9]>
 <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
