--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="description" content="The Curriculum Vitae of Aaron Jenner."/>
 <meta charset="UTF-8"> 
 
-<link type="text/css" rel="stylesheet" href="https://raw.githubusercontent.com/ajenner/ajenner.github.io/master/style.css">
+<link type="text/css" rel="stylesheet" href="/style.css">
 
 <!--[if lt IE 9]>
 <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
