Updated Personal Details

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 		
 		<div id="contactDetails" class="quickFade delayFour">
 			<ul>
-				<li>e: <a href="mailto:joe@bloggs.com" target="_blank">joe@bloggs.com</a></li>
-				<li>w: <a href="http://www.bloggs.com">www.bloggs.com</a></li>
-				<li>m: 01234567890</li>
+				<li>e: <a href="mailto:ajenner@tcd.ie" target="_blank">ajenner@tcd.ie</a></li>
+				<li>e2: <a href="mailto:aaronjenner13@gmail.com" target="_blank">aaronjenner13@gmail.com</a></li>
+				<li>m: 085 705 8556</li>
 			</ul>
 		</div>
 		<div class="clear"></div>
@@ -40,7 +40,9 @@
 				</div>
 				
 				<div class="sectionContent">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dolor metus, interdum at scelerisque in, porta at lacus. Maecenas dapibus luctus cursus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
+					<p>I am a Fourth Year Computer Science Student at Trinity College Dublin. I am looking for a graduate position located in Dublin for 2017.</p>
+					<p>I am comfortable working on Frontend and Backend, with experience in both. </p>
+					<p>I'm looking for somewhere challenging, ideally with an interest in functional programming. My perfect workplace would give me a sense of autonomy in my work, while pushing me to learn.</p>
 				</div>
 			</article>
 			<div class="clear"></div>
