more personal things

--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
 		
 		<div id="contactDetails" class="quickFade delayFour">
 			<ul>
-				<li>e: <a href="mailto:ajenner@tcd.ie" target="_blank">ajenner@tcd.ie</a></li>
-				<li>e2: <a href="mailto:aaronjenner13@gmail.com" target="_blank">aaronjenner13@gmail.com</a></li>
+				<li>e: <a href="mailto:aaronjenner13@gmail.com" target="_blank">aaronjenner13@gmail.com</a></li>
 				<li>m: 085 705 8556</li>
+				<li></li>
+				<li>dob: 16/05/1995</li>
 			</ul>
 		</div>
 		<div class="clear"></div>
@@ -40,9 +41,9 @@
 				</div>
 				
 				<div class="sectionContent">
-					<p>I am a Fourth Year Computer Science Student at Trinity College Dublin. I am looking for a graduate position located in Dublin for 2017.</p>
-					<p>I am comfortable working on Frontend and Backend, with experience in both. </p>
-					<p>I'm looking for somewhere challenging, ideally with an interest in functional programming. My perfect workplace would give me a sense of autonomy in my work, while pushing me to learn.</p>
+					<p>I am a Fourth Year Computer Science Student at Trinity College Dublin. I am looking for a graduate position located in Dublin for 2017.
+					I am comfortable working on Frontend and Backend, with experience in both.</p>
+					<p>My perfect workplace would give me a sense of autonomy in my work, while also being challenging and pushing me to learn and improve.</p>
 				</div>
 			</article>
 			<div class="clear"></div>
