changed list style

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				<article>
 					<h2>Trinity College Dublin</h2>
 					<p class="subDetails">September 2013 - May 2017</p>
-					<ul>
+					<ul class="keySkills">
 						<li>First Year - First Class Honours</li>
 						<li>Second Year - Second Class Honours</li>
 						<li>Third Year - Second Class Honours</li>
