--- a/index.html
+++ b/index.html
@@ -59,10 +59,16 @@
 					<h2>Trinity College Dublin</h2>
 					<p class="subDetails">September 2013 - May 2017</p>
 					<ul class="keySkills">
-						<li>First Year - First Class Honours</li>
-						<li>Second Year - Second Class Honours</li>
-						<li>Third Year - Second Class Honours</li>
+						<li>First Year</li>
+						<li>Second Year</li>
+						<li>Third Year</li>
+					</ul>					
+					<ul class="keySkills">
+						<li>First Class Honours</li>
+						<li>Second Class Honours</li>
+						<li>Second Class Honours</li>
 					</ul>
+
 				</article>
 			</div>
 			<div class="clear"></div>
@@ -84,7 +90,7 @@
 				<article>
 					<h2>Web Development at Trinity College</h2>
 					<p class="subDetails">March 2016 - October 2016</p>
-					<p>Over the Summer, I assisted in updating the trinity website to a newer , more modern style. Most of the work was done in php and html. I primarily took content from the old sites and reformatted it to comply with the new php templates. Some of the sites had to be built from scratch, as no older version existed. In these cases I had to create a new php template depending on what the site owner wanted. Then I would populate the site with html content, usually given to me via powerpoint.</p>
+					<p>Over the Summer, I assisted in updating the trinity website to a newer, more modern style. Most of the work was done in php and html. I primarily took content from the old sites and reformatted it to comply with the new php templates. Some of the sites had to be built from scratch, as no older version existed. In these cases I had to create a new php template depending on what the site owner wanted. Then I would populate the site with html content, usually given to me via powerpoint.</p>
 				</article>
 			</div>
 			<div class="clear"></div>
