--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<section>
 			<article>
 				<div class="sectionTitle">
-					<h1>Personal Profile</h1>
+					<h1>About</h1>
 				</div>
 				
 				<div class="sectionContent">
@@ -111,6 +111,26 @@
 			<div class="clear"></div>
 		</section>
 		
+		<section>
+			<div class="sectionTitle">
+				<h1>Skills</h1>
+			</div>
+			
+			<div class="sectionContent">
+					<p class="subDetails">Languages</p>
+					<ul class="keySkills">
+						<li>Java</li>
+						<li>Elixir</li>
+						<li>Python</li>
+						<li>Haskell</li>
+						<li>C/C++</li>
+						<li>PHP</li>
+					</ul>					
+			</div>
+			<div class="clear"></div>
+		</section>
+		
+
 	</div>
 </div>
 </body>
