--- a/index.html
+++ b/index.html
@@ -113,11 +113,10 @@
 		
 		<section>
 			<div class="sectionTitle">
-				<h1>Skills</h1>
+				<h1>Languages</h1>
 			</div>
 			
 			<div class="sectionContent">
-					<p class="subDetails">Languages</p>
 					<ul class="keySkills">
 						<li>Java</li>
 						<li>Elixir</li>
