--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 				<article>
 					<h2>Sales Advisor at Maplin Electronics</h2>
 					<p class="subDetails">December 2014 - July 2015</p>
-					<p>During my time at maplin, I assisted customers with their purchases, answering any questions they had and finding them the most appropriate items. I performed stock takes, handled deliveries and operated the tills during busy hours.</p>
+					<p>During my time at Maplin, I assisted customers with their purchases, answering any questions they had and finding them the most appropriate items. I performed stock takes, handled deliveries and operated the tills during busy hours.</p>
 				</article>
 				
 				<article>
@@ -105,7 +105,7 @@
 			<div class="sectionContent">
 				<article>
 					<h2>Final Year Project</h2>
-					<p>During the second term of the year, I will be working with Facebook on their static analysis tool Infer. I hope to implement some new checks into the tool to help identify new categories of bugs than what is currently offered. This is currently in the research stage.</p>
+					<p>During the second term of the year, I will be working with Facebook on their static analysis tool Infer. I hope to implement some new checks into the tool, to help identify new categories of bugs than what are currently offered. This is currently in the research stage.</p>
 				</article>
 			</div>
 			<div class="clear"></div>
