--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 			<div class="sectionContent">
 				<article>
 					<h2>Final Year Project</h2>
-					<p>During the second term of the year, I will be working with Facebook on their static analysis tool Infer. I hope to implement some new checks into the tool, to help identify new categories of bugs than what are currently offered. This is currently in the research stage.</p>
+					<p>During the second term of the year, I will be working with Facebook on their static analysis tool Infer. I hope to implement some new checks into the tool, to help identify new categories of bugs than what are currently being found. This is currently in the research stage.</p>
 				</article>
 			</div>
 			<div class="clear"></div>
