--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 						<li>Third Year</li>
 					</ul>					
 					<ul class="keySkills">
-						<li>First Class Honours</li>
-						<li>Second Class Honours</li>
-						<li>Second Class Honours</li>
+						<li>First Class Honours (1.1)</li>
+						<li>Second Class Honours (2.1)</li>
+						<li>Second Class Honours (2.1)</li>
 					</ul>
 
 				</article>
