--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 						<li>Second Year</li>
 						<li>Third Year</li>
 					</ul>					
-					<ul class="keySkills">
-						<li>First Class Honours  (1.1)</li>
+					<ul class="keyHons">
+						<li>First Class Honours (1.1)</li>
 						<li>Second Class Honours (2.1)</li>
 						<li>Second Class Honours (2.1)</li>
 					</ul>
