--- a/index.html
+++ b/index.html
@@ -59,16 +59,10 @@
 					<h2>Trinity College Dublin</h2>
 					<p class="subDetails">September 2013 - May 2017</p>
 					<ul class="keySkills">
-						<li>First Year</li>
-						<li>Second Year</li>
-						<li>Third Year</li>
-					</ul>					
-					<ul class="keyHons">
-						<li>First Class Honours (1.1)</li>
-						<li>Second Class Honours (2.1)</li>
-						<li>Second Class Honours (2.1)</li>
+						<li>First Year First Class Honours (1.1)</li>
+						<li>Second Year Second Class Honours (2.1)</li>
+						<li>Third Year Second Class Honours (2.1)</li>
 					</ul>
-
 				</article>
 			</div>
 			<div class="clear"></div>
