First post college update

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				
 				<div class="sectionContent">
 					<p>I am a Fourth Year Computer Science Student at Trinity College Dublin. I am looking for a graduate position located in Dublin for 2017.</p>
-					<p>My perfect workplace would give me a sense of autonomy in my work, while also being challenging and pushing me to learn and improve.</p>
+					<p>My perfect workplace would provide a challenge to me daily, while pushing me to learn and improve.</p>
 				</div>
 			</article>
 			<div class="clear"></div>
@@ -71,7 +71,7 @@
 		
 		<section>
 			<div class="sectionTitle">
-				<h1>Experience</h1>
+				<h1>Work Experience</h1>
 			</div>
 			
 			<div class="sectionContent">
@@ -84,7 +84,7 @@
 				<article>
 					<h2>Web Development at Trinity College</h2>
 					<p class="subDetails">March 2016 - October 2016</p>
-					<p>Over the Summer, I assisted in updating the trinity website to a newer, more modern style. Most of the work was done in php and html. I primarily took content from the old sites and reformatted it to comply with the new php templates. Some of the sites had to be built from scratch, as no older version existed. In these cases I had to create a new php template depending on what the site owner wanted. Then I would populate the site with html content, usually given to me via powerpoint.</p>
+					<p>Over the Summer, I assisted in updating the trinity website to a newer, more modern style. Most of the work was done in php and html. I primarily took content from the old sites and reformatted it to comply with the new php templates. Some of the sites had to be built from scratch, as no older version existed. In these cases I had to create a new php template depending on what the site owner wanted. Then I would populate the site with html content sent to me via email.</p>
 				</article>
 			</div>
 			<div class="clear"></div>
@@ -93,15 +93,22 @@
 		
 		<section>
 			<div class="sectionTitle">
-				<h1>Projects</h1>
+				<h1>Projects and Other College Work</h1>
 			</div>
 			
 			<div class="sectionContent">
 				<article>
 					<h2>Final Year Project</h2>
-					<p>During the second term of the year, I will be working with Facebook on their static analysis tool Infer. I hope to implement some new checks into the tool, to help identify new categories of bugs than what are currently being found. This is currently in the research stage.</p>
+					<p>My Final year project involved working on Facebook's static analysis tool, Infer. The tool is written in OCaml and is designed to detect null pointer exceptions and memory leaks in Java and C/C++. At the start of the project there was no way for users on Windows machines to use Infer. I created a functional version of infer that would work on Windows by leveraging the new Bash on Windows tool. This involved getting an understanding of the various libraries involved in the Infer build process. In some cases, these libraries needed to be altered to work in a Windows environment.</p>
 				</article>
 			</div>
+						<div class="sectionContent">
+				<article>
+					<h2>Final Year Project</h2>
+					<p>My Final year project involved working on Facebook's static analysis tool, Infer. The tool is written in OCaml and is designed to detect null pointer exceptions and memory leaks in Java and C/C++. At the start of the project there was no way for users on Windows machines to use Infer. I created a functional version of infer that would work on Windows by leveraging the new Bash on Windows tool. This involved getting an understanding of the various libraries involved in the Infer build process. In some cases, these libraries needed to be altered to work in a Windows environment.</p>
+				</article>
+			</div>
+
 			<div class="clear"></div>
 		</section>
 		
@@ -118,6 +125,8 @@
 						<li>Haskell</li>
 						<li>C/C++</li>
 						<li>PHP</li>
+						<li>OCaml</li>
+						<li>Javascript</li>
 					</ul>					
 			</div>
 			<div class="clear"></div>
