--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
 					<p>My Final year project involved working on Facebook's static analysis tool, Infer. The tool is written in OCaml and is designed to detect null pointer exceptions and memory leaks in Java and C/C++. At the start of the project there was no way for users on Windows machines to use Infer. I created a functional version of infer that would work on Windows by leveraging the new Bash on Windows tool. This involved getting an understanding of the various libraries involved in the Infer build process. In some cases, these libraries needed to be altered to work in a Windows environment.</p>
 				</article>
 			</div>
-						<div class="sectionContent">
+			<div class="sectionContent">
 				<article>
-					<h2>Final Year Project</h2>
-					<p>My Final year project involved working on Facebook's static analysis tool, Infer. The tool is written in OCaml and is designed to detect null pointer exceptions and memory leaks in Java and C/C++. At the start of the project there was no way for users on Windows machines to use Infer. I created a functional version of infer that would work on Windows by leveraging the new Bash on Windows tool. This involved getting an understanding of the various libraries involved in the Infer build process. In some cases, these libraries needed to be altered to work in a Windows environment.</p>
+					<h2>DUCSS (Dublin University Computer Science Society)</h2>
+					<p>When I first came to college, the computer science society were extremely helpful in introducing me to my classmates. It was through the society that I forged the friendships which have meant so much to me during the last few years. In third year I wanted to give back to the society. I was elected as the competitions officer, a role which had me overseeing the coaching and development of the college's competitive coding teams. During this time, a Trinity team won the Irish section of the UKIEPC, a competition spanning the UK and Ireland. Teams were also entered into the IRLPC and NWERC, Irish and European tournaments respectively. In fourth year, I was elected as the society's treasurer, a role which had me resposible for all of the society's financial records and dealings. I was also the society's representative to the central societys commission.</p>
 				</article>
 			</div>
 
