--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 				<article>
 					<h2>Web Development at Trinity College</h2>
 					<p class="subDetails">March 2016 - October 2016</p>
-					<p>Over the Summer, I assisted in updating the trinity website to a newer, more modern style. Most of the work was done in php and html. I primarily took content from the old sites and reformatted it to comply with the new php templates. Some of the sites had to be built from scratch, as no older version existed. In these cases I had to create a new php template depending on what the site owner wanted. Then I would populate the site with html content sent to me via email.</p>
+					<p>Over the Summer, I assisted in updating the trinity website to a newer, more modern style. Most of the work was done in php and html. I primarily took content from the old sites and reformatted it to comply with the new php templates. Some of the sites had to be built from scratch, as no older version existed. In these cases, I created a new php template depending on what the site owner wanted and then populated the site with the html content that the owner provided to me, usually via email.</p>
 				</article>
 			</div>
 			<div class="clear"></div>
@@ -105,7 +105,7 @@
 			<div class="sectionContent">
 				<article>
 					<h2>DUCSS (Dublin University Computer Science Society)</h2>
-					<p>When I first came to college, the computer science society were extremely helpful in introducing me to my classmates. It was through the society that I forged the friendships which have meant so much to me during the last few years. In third year I wanted to give back to the society. I was elected as the competitions officer, a role which had me overseeing the coaching and development of the college's competitive coding teams. During this time, a Trinity team won the Irish section of the UKIEPC, a competition spanning the UK and Ireland. Teams were also entered into the IRLPC and NWERC, Irish and European tournaments respectively. In fourth year, I was elected as the society's treasurer, a role which had me resposible for all of the society's financial records and dealings. I was also the society's representative to the central societys commission.</p>
+					<p>When I first came to college, the computer science society were extremely helpful in introducing me to my classmates. It was through the society that I forged the friendships which have meant so much to me during the last few years. In third year I wanted to give back to the society. I was elected as the competitions officer, a role which had me overseeing the coaching and development of the college's competitive coding teams. During this time, a Trinity team won the Irish section of the UKIEPC, a competition spanning the UK and Ireland. Teams were also entered into the IRLPC and NWERC, Irish and European tournaments respectively. In fourth year, I was elected as the society's treasurer, a role which had me resposible for all of the society's financial records and dealings.</p>
 				</article>
 			</div>
 
