--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 			<div class="sectionContent">
 				<article>
 					<h2>DUCSS (Dublin University Computer Science Society)</h2>
-					<p>When I first came to college, the computer science society were extremely helpful in introducing me to my classmates. It was through the society that I forged the friendships which have meant so much to me during the last few years. In third year I wanted to give back to the society. I was elected as the competitions officer, a role which had me overseeing the coaching and development of the college's competitive coding teams. During this time, a Trinity team won the Irish section of the UKIEPC, a competition spanning the UK and Ireland. Teams were also entered into the IRLPC and NWERC, Irish and European tournaments respectively. In fourth year, I was elected as the society's treasurer, a role which had me resposible for all of the society's financial records and dealings.</p>
+					<p>In my third year in college, I was elected as the competitions officer of DUCSS, a role which had me overseeing the coaching and development of the college's competitive coding teams. During this time, a Trinity team won the Irish section of the UKIEPC, a competition spanning the UK and Ireland. Teams were also entered into the IRLPC and NWERC, Irish and European tournaments respectively. In fourth year, I was elected as the society's treasurer, a role which had me directly responsible for all of the society's financial records and dealings.</p>
 				</article>
 			</div>
 
