--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 		
 		<div id="contactDetails" class="quickFade delayFour">
 			<ul>
-				<li>e: <a href="mailto:aaronjenner13@gmail.com" target="_blank">aaronjenner13@gmail.com</a></li>
-				<li>m: 085 705 8556</li>
+				<li>E: <a href="mailto:aaronjenner13@gmail.com" target="_blank">aaronjenner13@gmail.com</a></li>
+				<li>M: 085 705 8556</li>
 				<li></li>
-				<li>dob: 16/05/1995</li>
+				<li>DoB: 16/05/1995</li>
 			</ul>
 		</div>
 		<div class="clear"></div>
