Schools and hobbies

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 				<div class="sectionContent">
 					<p>I am a Fourth Year Computer Science Student at Trinity College Dublin. I am looking for a graduate position located in Dublin for 2017.</p>
 					<p>My perfect workplace would provide a challenge to me daily, while pushing me to learn and improve.</p>
+					<p>I enjoy playing and watching football, I played for my secondary school team, as well as my local team until I was 16. I also enjoy playing video games such as League of Legends and have competed in several gaming tournaments at college level. 
 				</div>
 			</article>
 			<div class="clear"></div>
@@ -56,6 +57,14 @@
 			
 			<div class="sectionContent">
 				<article>
+					<h2>Coláiste Phádraig CBS, Lucan</h2>
+					<p class="subDetails">September 2007 - May 2013</p>
+					<ul class="keySkills">
+						<li>Junior Certificate: 4A's 6B's
+						<li>Leaving Certificate: 465 points</li>
+					</ul>
+				</article>
+				<article>
 					<h2>Trinity College Dublin</h2>
 					<p class="subDetails">September 2013 - May 2017</p>
 					<ul class="keySkills">
@@ -64,6 +73,7 @@
 						<li>Third Year<br> Second Class Honours<br> (2.1)</li>
 					</ul>
 				</article>
+
 			</div>
 			<div class="clear"></div>
 		</section>
