more sporty stuff

--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
 				<div class="sectionContent">
 					<p>I am a Fourth Year Computer Science Student at Trinity College Dublin. I am looking for a graduate position located in Dublin for 2017.</p>
 					<p>My perfect workplace would provide a challenge to me daily, while pushing me to learn and improve.</p>
-					<p>I enjoy playing and watching football, I played for my secondary school team, as well as my local team until I was 16. I also enjoy playing video games such as League of Legends and have competed in several gaming tournaments at college level. 
-				</div>
+					<p>I enjoy playing and watching football, I played for my secondary school team, as well as my local team, Palmerstown United until I was 16. I am involved in a competitive gaming scene and have represented my college in several tournaments, Including the Intercolliegiate Championship Series.</div>
 			</article>
 			<div class="clear"></div>
 		</section>
@@ -60,8 +59,8 @@
 					<h2>Coláiste Phádraig CBS, Lucan</h2>
 					<p class="subDetails">September 2007 - May 2013</p>
 					<ul class="keySkills">
-						<li>Junior Certificate: 4A's 6B's
-						<li>Leaving Certificate: 465 points</li>
+						<li>Junior Certificate<br> 4A's 6B's
+						<li>Leaving Certificate<br> 465 points</li>
 					</ul>
 				</article>
 				<article>
