--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 				<div class="sectionContent">
 					<p>I am a Fourth Year Computer Science Student at Trinity College Dublin. I am looking for a graduate position located in Dublin for 2017.</p>
 					<p>My perfect workplace would provide a challenge to me daily, while pushing me to learn and improve.</p>
-					<p>I enjoy playing and watching football, I played for my secondary school team, as well as my local team, Palmerstown United until I was 16. I am involved in a competitive gaming scene and have represented my college in several tournaments, Including the Intercolliegiate Championship Series.</div>
+					<p>I enjoy playing and watching football, I played for my secondary school team, as well as my local team, Palmerstown United until I was 16. In 2008 I was given the club player of the year award and also earned the Golden Boot while helping my team to win the Kilcock cup. I am currently involved in a competitive gaming scene and have represented my college in four finals, winning one. </p>
+				</div>
 			</article>
 			<div class="clear"></div>
 		</section>
@@ -140,7 +141,6 @@
 			</div>
 			<div class="clear"></div>
 		</section>
-		
 
 	</div>
 </div>
